
-------------------------------------------------------------------------------

Tue Dec 28 00:31:03 EST 1999
(Christian)

Textboxes can now be hidden.

-------------------------------------------------------------------------------

Tue Dec 28 00:32:07 EST 1999
(Christian)

More E-Mountbox stuff. Config dialog now changes dynamically, depending
on whether you have patterns for mathching mountpoint types or not.
Deleting of mountpoint types should work. Still needs more debugging...

-------------------------------------------------------------------------------

Mon Jan  3 15:09:24 PST 2000
(KainX)

No, this is version 0.5, not 0.6, Tom.

-------------------------------------------------------------------------------

Tue Jan  4 20:57:24 PST 2000
(KainX)

Final preparations for the release of 0.5.

-------------------------------------------------------------------------------

Wed Jan  5 17:02:26 GMT 2000
(gilbertt)

Am I too late for 0.5?

Just cleaning up the help a bit. Sorry about the version thing btw, I guess
I have a thing for the number 6 or something?

:)

-------------------------------------------------------------------------------

Wed Jan  5 20:11:40 PST 2000
(KainX)

New version number and copyright dates that include 2000.

-------------------------------------------------------------------------------

Thu Jan  6 11:57:10 GMT 2000
(gilbertt)

Okay. I'm trying to make epplets gnome-session friendly (dunno why =P).

People complain about the automatic respawning, so I have added a configure
option --disable-auto-respawn to prevent epplets remembering to restart
(they still remember location, sticky etc).

*I have not tested this* because I refuse to run gnome-session on this box,
but I see no reason why it shouldn't be ok.

-------------------------------------------------------------------------------

Wed Jan  12 21:37:20 GMT 2000
(gilbertt)

Oops. Fixed a long standing bug in E-Urlwatch. Noone uses the ftp or get
buttons obviously ;)
